--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Snake
+name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
@@ -12,7 +12,7 @@ jobs:
     steps:
       # Snake Animation
       - uses: Platane/snk@master
-        id: snake-svg
+        id: snake-gif
         with:
           github_user_name: rosembergbr
           svg_out_path: dist/github-contribution-grid-snake.svg
